initial implementation of NextJS based UI
